fix dark mode

--- a/src/components/ExportDialog.scss
+++ b/src/components/ExportDialog.scss
@@ -16,7 +16,7 @@
     max-height: 25rem;
   }
 
-  .Appearance_dark .ExportDialog__preview canvas {
+  &.Appearance_dark .ExportDialog__preview canvas {
     filter: none;
   }
 
